--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#" class="logo">Foods</a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
-        <ul>
+        <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#about"></a>About</li>
             <li><a href="#menu"></a>Menu</li>
