Add home section in HTML

--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
             <li><a href="#contact"></a>Contact</li>
         </ul>
     </header>
+
+    <!--home start-->
+    <section class="home" id="home">
+        <div>
+            <h1>Full Website</h1>
+            <h2>Food The <br> Most Precius Things</h2>
+            <a href="#" class="btn">Today's Menu</a>
+        </div>
+
+        <div class="home-img">
+            <img src="img/home.png">
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
