Add about section in HTML

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!--home start-->
     <section class="home" id="home">
-        <div>
+        <div class="home-text">
             <h1>Full Website</h1>
             <h2>Food The <br> Most Precius Things</h2>
             <a href="#" class="btn">Today's Menu</a>
@@ -42,6 +42,19 @@
 
     </section>
 
+    <!--about start-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.png">
+        </div>
+
+        <div class="about-text">
+            <span>About Us</span>
+            <h2>We speak the good <br> food language</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus hendrerit congue dolor et vehicula. Cras laoreet lorem id nisl auctor, a convallis diam facilisis. Donec sagittis a ipsum in venenatis. Duis justo sapien, varius at metus sit amet, sollicitudin condimentum dolor.</p>
+            <a href="#" class="btn">Today's Menu</a>
+        </div>
+    </section>
 
 </body>
 
