--- a/index.html
+++ b/index.html
@@ -56,6 +56,45 @@
         </div>
     </section>
 
+    <!--menu start-->
+    <section class="menu" id="menu">
+        <div class="heading">
+            <span>Food menu</span>
+            <h2>Fresh taste and great price</h2>
+        </div>
+
+        <div class="menu-container">
+            <div class="box">
+                <div class="boc-img">
+                    <img src="img/food1.png">
+                </div>
+                <h2>Chicken Burger</h2>
+                <h3>Tasty Food</h3>
+                <span>$11.00</span>
+                <i class='bx bx-cart-alt'></i>
+            </div>
+
+            <div class="box">
+                <div class="boc-img">
+                    <img src="img/food2.png">
+                </div>
+                <h2>Special Beef Burger</h2>
+                <h3>Tasty Food</h3>
+                <span>$15.00</span>
+                <i class='bx bx-cart-alt'></i>
+            </div>
+
+            <div class="box">
+                <div class="boc-img">
+                    <img src="img/food3.png">
+                </div>
+                <h2>Chicken Fry Pack</h2>
+                <h3>Tasty Food</h3>
+                <span>$13.50</span>
+                <i class='bx bx-cart-alt'></i>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
