--- a/index.html
+++ b/index.html
@@ -95,6 +95,34 @@
             </div>
         </div>
     </section>
+
+    <!--service start-->
+    <section class="services" id="services">
+        <div class="heading">
+            <span>Services</span>
+            <h2>We provide best quality food</h2>
+        </div>
+
+        <div class="services-container">
+            <div class="s-box">
+                <img src="img/s1.png">
+                <h3>Order</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus hendrerit congue dolor et vehicula.</p>
+            </div>
+
+            <div class="s-box">
+                <img src="img/s2.png">
+                <h3>Shipping</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus hendrerit congue dolor et vehicula.</p>
+            </div>
+
+            <div class="s-box">
+                <img src="img/s3.png">
+                <h3>Deliver</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus hendrerit congue dolor et vehicula.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
