--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="menu-container">
             <div class="box">
-                <div class="boc-img">
+                <div class="box-img">
                     <img src="img/food1.png">
                 </div>
                 <h2>Chicken Burger</h2>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="box">
-                <div class="boc-img">
+                <div class="box-img">
                     <img src="img/food2.png">
                 </div>
                 <h2>Special Beef Burger</h2>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="box">
-                <div class="boc-img">
+                <div class="box-img">
                     <img src="img/food3.png">
                 </div>
                 <h2>Chicken Fry Pack</h2>
