--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="home-text">
             <h1>Full Website</h1>
             <h2>Food The <br> Most Precius Things</h2>
-            <a href="#" class="btn">Today's Menu</a>
+            <a href="#" class="btn">Learn More</a>
         </div>
 
         <div class="home-img">
@@ -123,6 +123,13 @@
             </div>
         </div>
     </section>
+
+    <!--call to action-->
+    <section class="cta">
+        <h2>We make quality food <br> Everyday</h2>
+        <a href="#" class="btn">Let's Talk</a>
+    </section>
+
 </body>
 
 </html>
