--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
     </section>
 
 
+    <!--Javascript-->
+    <script type="text/javascript" src="js/script.js"></script>
+
 </body>
 
 </html>
