Navbar bug fixed

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 </head>
 
 <body>
+    
     <header>
         <a href="#" class="logo">Foods</a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about"></a>About</li>
-            <li><a href="#menu"></a>Menu</li>
-            <li><a href="#services"></a>Service</li>
-            <li><a href="#contact"></a>Contact</li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#services">Service</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </header>
 
